# free_throw_bot

./: .gitignore  Dockerfile  LICENSE.txt  README.md  app.js  cronjob.yaml  helper.js  main.py  package-lock.json  package.json  pyproject.toml
k8s/: configmap.yaml  cronjob.yaml
src/free_throw_bot/: __about__.py  main.py
tests/: __init__.py
