[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "free-throw-bot"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "AmanRiat1", email = "amanriat777@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "atproto",
  "nba_api",
  "pandas",
]

[project.urls]
Documentation = "https://github.com/AmanRiat1/free-throw-bot#readme"
Issues = "https://github.com/AmanRiat1/free-throw-bot/issues"
Source = "https://github.com/AmanRiat1/free-throw-bot"

[tool.hatch.version]
path = "src/free_throw_bot/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/free_throw_bot tests}"

[tool.coverage.run]
source_pkgs = ["free_throw_bot", "tests"]
branch = true
parallel = true
omit = [
  "src/free_throw_bot/__about__.py",
]

[tool.coverage.paths]
free_throw_bot = ["src/free_throw_bot", "*/free-throw-bot/src/free_throw_bot"]
tests = ["tests", "*/free-throw-bot/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
